# slam_model

ch3/useGeometry/: eigenGeometry.cpp
ch4/Sophus/: readme.txt
ch4/useSophus/: CMakeLists.txt  useSophus.cpp
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp
ch5/joinMap/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  joinMap  readme.txt
ch6/ceres_curve_fitting/: main.cpp  readme.txt
ch6/g2o_curve_fitting/: readme.txt
